<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_empty_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_text"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:visibility="visible" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical">

            <LinearLayout
                android:id="@+id/layout_movie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="8dp">

                    <ImageView
                        android:id="@+id/img_movie"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/ic_error"
                        android:contentDescription="@string/content_description_movie_poster"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_movie_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_movie_name"
                            android:textSize="20sp"
                            android:layout_marginBottom="8dp" />

                        <TextView
                            android:id="@+id/tv_year"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_movie_year"
                            android:layout_marginBottom="8dp"
                            android:textSize="20sp" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tv_rating_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/tv_rating"
                                android:textSize="20sp"
                                android:layout_marginRight="4dp"
                                android:layout_marginEnd="4dp" />

                            <TextView
                                android:id="@+id/tv_rating_value"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="9.196"
                                android:textSize="20sp"
                                android:textColor="@color/colorMovieRating" />
                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_movie_description"
                    android:textSize="15sp"
                    android:layout_margin="8dp" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </FrameLayout>

</LinearLayout>